src/stream.scss
.controls{
    flex: 0 0 50px;
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: row;

    &-left{
        display: flex;
        align-items: center;
    }
}

@media only screen and (max-width: 900px) {
    .controls{
        flex-direction: column;
    }
}

@media only screen and (max-width: 500px) {
    .controls-left{
        flex-direction: column;
    }
    .logo{
        flex: 1!important;
    }
}

.add-stream{
    display: flex;
    align-items: center;

    & option[value="kick"]{
        background-image:url(./logos/kick.png);
    }

    & #stream-input{
        height: 25px;
        width: 130px;
        padding: 5px;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 10px 0 0 10px;
        background-color: #2563eb;
        color: white;
        border-right: 1px solid black;
        opacity: 1;
        
    }
    & input{
        background-color: #1e53c5;
        border: none;
        border-radius: 10px;
        padding: 7px;
        width: 100%;
        color: #FFF;
        &::placeholder{
            color: white;
            opacity: 1;
        }
    }

    &-service-selector{
        height: 35px;
        border: none;
        width: 50px;
        background-color: #2563eb;
        color: white;
        border-right: 1px solid black;
        display: flex;
        align-items: center;
        justify-content: center;
        cursor: pointer;

        & img{
            width: 24px;
            height: 24px;
        }

        & .icon{
            width: 16px;
            height: 16px;
            margin-left: 2px;
        }
    }
    
    & .button{
        height: 35px;
        border-radius: 0 10px 10px 0;
        border: none;
        width: 50px;
        font-weight: bold;
        background-color: #28a745;
        color: #FFF;
        text-align: center;
        font-size: 18px;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;

        &:hover{
            background-color: rgb(45, 175, 76)
        }
    }
}

.logo{
    font-size: 24px;
    padding: 0 16px;
    flex: 0 0 170px;
}

.stream-list{
    display: flex;
    align-items: center;
    gap: 5px;
    margin: 0 10px 0 0;
    overflow-x: auto;
    scrollbar-width: none;
    padding: 0;
    flex: 1;
    max-width: 100%;

    &-item{
        display: flex;
        align-items: center;
        background-color: #262626;
        height: 35px;
        padding: 0 10px;
        border-radius: 10px;
        cursor: pointer;


        &-img{
            width: 16px;
            height: 16px;
            margin-right: 10px;
            cursor: pointer;
            & img{
                width: 100%;
                height: 100%;
            }
        }

        &-delete{
            background-color: #404040;
            height: 20px;
            width: 20px;
            border-radius: 15px;
            margin-left: 15px;
            display: flex;
            align-items: center;
            justify-content: center;
            line-height: 20px;
            font-size: 12px;
            cursor: pointer;
        }
    }
}

.stream-container{
    display: grid;
    grid-auto-rows: 1fr;
    height: 100%;
    flex-grow: 1;
    overflow: auto ;

    & .stream{
        width:100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        border: none;
    }
}

.stream-kick{
    aspect-ratio: 16 / 9;
    height: 100%;
    max-height: 100%;
    max-width: 100%;
    grid-column-start: 1;
    grid-column-end: -1;
}

.bla{
    grid-column-start: 1;
    grid-column-end: -1;
}

.x-mark{
    width: 16px;
    height: 16px;
}

.plus{
    width: 20px;
    height: 20px;
}

.grid-icon{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    justify-items: center;
    align-items: center;
    width: 25px;
    height: 25px;
    padding: 5px;
    background-color: rgb(36 44 98);
    border-radius: 7px;
    cursor: pointer;

    & div{
        background-color: rgb(68 202 255);
        width: 10px;
        height: 10px
    }

    &.showcase{
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr; 
        & .first{
            grid-column: 1 / -1;
            width: 23px;
            height: 10px;
        }

        & div{
            width: 7px;
            height: 7px
        }
    }
}

.menu-list{
    display: flex;
    gap: 5px;
}

